# SSH-Viewer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qml.qrc
include/: common.h  databasemanager.h  singleton.hpp
include/models/: sshmanager.h  sshmodel.h
include/ssh/: sshdata.h  sshmanager.h  sshmodel.h
qml/: Main.qml  SideBar.qml
qml/Components/: CustomButton.qml  ImageButton.qml  TabButton.qml
qml/Consts/: Colors.qml  Images.qml  Strings.qml
qml/Views/: EditList.qml  SSHList.qml  SideBar.qml  TabBarArea.qml
src/: databasemanager.cpp  main.cpp
src/models/: sshmanager.cpp  sshmodel.cpp
src/ssh/: sshdata.cpp  sshmanager.cpp  sshmodel.cpp
